Fix bug and styles
Made following fix and changes:
- Status propagation now works.
- Changes default app porto from 3000 to 8080 (to avoid conflict with
server).
- Moved definitively `prettyPrint` function into `smts` object.
- Fixed table column sometimes too narrow.

--- a/gui/client/css/main.css
+++ b/gui/client/css/main.css
@@ -36,11 +36,14 @@ html, body {
     padding: 5px;
     border: 1px solid var(--color-border-dark);
     border-collapse: collapse;
-    max-width: 100%;
 }
 
 .smts-table th {
     background-color: var(--color-table-header);
+}
+
+.smts-table td {
+    min-width: 40px;
 }
 
 .smts-table-interactive tr:hover {
